--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ sudo: required
 #   - amd64
 #   - arm64
 # os: linux
-# language: minimal
+language: minimal
 # services:
 #   - docker
 before_install:
