--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,22 @@
-# dist: xenial
+dist: xenial
 sudo: required
 # arch:
 #   - amd64
   # - arm64
 os: linux
 language: minimal
-services:
-  - docker
+# services:
+#   - docker
 before_install:
-  # - curl -fsSL https://get.docker.com | sh
+  - curl -fsSL https://get.docker.com | sh
   - echo '{"experimental":true}' | sudo tee /etc/docker/daemon.json
   - mkdir -p $HOME/.docker
   - echo '{"experimental":"enabled"}' | sudo tee $HOME/.docker/config.json
-  - sudo service docker restart
-# install:
+  - sudo service docker start
+install:
 # Enables execution of different multi-architecture containers by QEMU and binfmt_misc
-#   - docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
-#   - docker buildx create --name xbuilder --use
+  - docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+  - docker buildx create --name xbuilder --use
 script:
   - scripts/build.sh ${TRAVIS_BRANCH} linux ${TRAVIS_CPU_ARCH}
   # - scripts/build.sh ${TRAVIS_BRANCH} windows
