--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
   - docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
   - docker buildx create --name xbuilder --use
 # script:
-  - scripts/build.sh ${TRAVIS_BRANCH}
+  # - scripts/build.sh ${TRAVIS_BRANCH}
   # - scripts/build.sh ${TRAVIS_BRANCH} linux ${TRAVIS_CPU_ARCH}
   # - scripts/build.sh ${TRAVIS_BRANCH} windows
 jobs:
