--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
 - echo '{"experimental":true}' | sudo tee /etc/docker/daemon.json
 - mkdir -p $HOME/.docker
 - echo '{"experimental":"enabled"}' | sudo tee $HOME/.docker/config.json
-- sudo service docker start
+- sudo service docker restart
 install:
 - docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
 - docker buildx create --name xbuilder --use
